Claims Management App/mdapipkg/mdapipkg/unpackaged/unpackaged/objects/Claim__c.object
<CustomObject>
    <description>Holds primary claim information.</description>
    <fields>
        <fullName>Claimant__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Claimant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Loss__c</fullName>
        <label>Date of Loss</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_of_Loss__c</fullName>
        <label>Description of Loss</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Policy_Coverage__c</fullName>
        <label>Policy Coverage</label>
        <referenceTo>Policy_Coverage__c</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Policy__c</fullName>
        <label>Policy</label>
        <referenceTo>Policy__c</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Claim</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Claimant__c</columns>
        <columns>Policy_Coverage__c</columns>
        <columns>Policy__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Claim Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>